--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Documents</title>
-</head>
-<body>
-   
-<div id="wrapper">
-    <div id="game">
-   
-    </div>
-</div>
-</body>
+<html>
+   <head>
+      <link rel="stylesheet" href="style.css">
+   </head>
+   <body>
+      <div id="stats">0 intentos</div>
+      <div id="wrapper">
+         <div id="game"></div>
+      </div>
+      <script src="script.js"></script>
+   </body>
 </html>
